--- a/.env
+++ b/.env
@@ -25,12 +25,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # databse driver mysql or postgresql or pgsql
-DB_CONNECTION=null
+DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=vania
+DB_DATABASE=vania1
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=Toba_2002
 DB_SSL_MODE=false
 DB_POOL=false
 DB_POOL_SIZE=2
