--- a/.env
+++ b/.env
@@ -28,9 +28,9 @@ REDIS_PORT=6379
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=vania1
+DB_DATABASE=yourdb
 DB_USERNAME=root
-DB_PASSWORD=Toba_2002
+DB_PASSWORD=pass
 DB_SSL_MODE=false
 DB_POOL=false
 DB_POOL_SIZE=2
